============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Changes to version 6.0.2 (since 6.0.1):
* user interface
  - Language: translation updates
* map
  - Waypoints: more reliable waypoint decluttering
  - Topology: fix rendering bug
  - Terrain: load more raster tiles on modern devices
* data files
  - Fixed potential crash while reading airfields files

Changes to version 6.0.1 (since 6.0):
* map
  - task, glide terrain: fix rendering bugs
* user interface
  - Language: translation updates
  - Language: always fall back to resource data
  - Language: enable translation on PPC2000/PPC2003
  - dialog "Switches": portrait mode layout fixed
  - dialog "Statistics": draw trace on task page
* terrain / topology
  - minor memory leak fixed
* glide computer
  - new built-in polars: IS28B2 and SZD30

Changes to version 6.0 (since 5.2.4):
* build system
  - compile with gcc / mingw32 / mingw32ce instead of Visual C++
* data files
  - support for SeeYou and Zander waypoint files
  - support for TNP airspace files
  - when started from SD card, XCSoarData is stored on SD card, too
  - when a XCSoarData directory exists on SD card, it is preferred
* devices
  - Altair Pro: task declaration
  - new drivers:
    - Flymaster F1
    - Flytec
    - ILEC SN10
    - Leonardo
  - NMEA logger and NMEA replay
* terrain / topology
  - cached terrain load during startup (faster)
  - incremental (faster) terrain/topology updates
  - faster terrain/topology rendering
  - slope shading can be turned off
  - auto-scale terrain colors
* user interface
  - mouse gestures
  - translation compatible with gettext / libintl
  - language auto-detection
  - configurable temperature unit (Fahrenheit)
  - configurable trail colors
* gauges
  - new FLARM radar screen
  - thermal assistant
* task
  - full rewrite of the engine, new task editor